--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,21 @@
-<header>
+<!-- <header>
   <h1>WelLcome to:</h1>
-  <h1>{{title}}</h1>
+  <h1 class="test">{{title}}</h1>
 </header>
 
 <div>
-  <h2>{{neeanaatawaitsumoyumewomitemasuka}}?</h2>
-  <h2>{{owarikakenokonosekaide}}</h2>
-  <h2>{{fusagaretamicchiwohirakumononinaru}}</h2>
-  <h2>{{messejiiwoidaitatsuraiyo}}</h2>
-  <app-button text="Add" color="pink" font="Old english Text MT"></app-button>
+  <div>
+    <h2>{{neeanaatawaitsumoyumewomitemasuka}}?</h2>
+    <h2>{{owarikakenokonosekaide}}</h2>
+    <h2>{{fusagaretamicchiwohirakumononinaru}}</h2>
+    <h2>{{messejiiwoidaitatsuraiyo}}</h2>
+    <app-button text="Add" color="pink" font="Old english Text MT"></app-button>
+
+    <a class="link" href="/utsup">Home</a>
+    <a class="link" href="/about">About</a>
+  </div>
+
+  
 </div>
 
 <footer>
@@ -20,4 +27,14 @@
     <p>But with asymmetric cryptography, it's like having two different keys, kinda like a lock and a key. One key is used to lock the message, and the other key is used to unlock it. It's like, one person has a special key to lock the message, and the other person has a different special key to unlock it.</p>
     
     <p>So, yeah, that's like the basic idea. Symmetric uses one key for both encryption and decryption, while asymmetric uses two different keys for that. It's all about keeping information safe and secure, you know?</p></span>
-</footer>
+</footer> -->
+<div>asd</div>
+
+<div>
+  <a routerLink="/shit" routerLinkActive="active" ariaCurrentWhenActive="page">Heroes</a>
+  <a routerLink="/utsup" routerLinkActive="active" ariaCurrentWhenActive="page">Heroes</a>
+</div>
+<router-outlet></router-outlet>
+
+
+<div>Allo</div>
