--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    color: #ccc;
+    background: #111;
+} 
+
+h1, h2 {
+    margin: 0;  
+}
