--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,13 +28,19 @@
     
     <p>So, yeah, that's like the basic idea. Symmetric uses one key for both encryption and decryption, while asymmetric uses two different keys for that. It's all about keeping information safe and secure, you know?</p></span>
 </footer> -->
-<div>asd</div>
+<div>You know?</div>
 
 <div>
-  <a routerLink="/shit" routerLinkActive="active" ariaCurrentWhenActive="page">Heroes</a>
-  <a routerLink="/utsup" routerLinkActive="active" ariaCurrentWhenActive="page">Heroes</a>
+
+  <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">/</a>
+  <br>
+  <a routerLink="/shit" routerLinkActive="active" ariaCurrentWhenActive="page">/Shit</a>
+  <br>
+  <a routerLink="/utsup" routerLinkActive="active" ariaCurrentWhenActive="page">/UtsuP</a>
+  <br>
+  
 </div>
 <router-outlet></router-outlet>
 
 
-<div>Allo</div>
+<div>I love ya </div>
